[gd_scene load_steps=3 format=2]

[ext_resource path="res://Battle/UI/Spell.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/BattleSelectedAbility.png" type="Texture" id=2]

[node name="Spell" type="HBoxContainer"]
margin_right = 75.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Pointer" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 12.0
margin_bottom = 14.0
texture = ExtResource( 2 )

[node name="SpellNameLabel" type="Label" parent="."]
margin_left = 16.0
margin_right = 38.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "Spell"

[node name="SpellUsesLabel" type="Label" parent="."]
margin_left = 42.0
margin_right = 51.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "10"
align = 2

[node name="Slash" type="Label" parent="."]
margin_left = 55.0
margin_right = 62.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "/"
align = 1

[node name="SpellMaxUsesLabel" type="Label" parent="."]
margin_left = 66.0
margin_right = 75.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "10"
